# ii-constructor

./: .gitignore  .pre-commit-config.yaml  Copyright_and_notes  README.md  copyrighter.py  engine.py  make_db_engine.bat  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  setup_venv.bat
AliceTool/: main.py
AliceTool/experiments/: DialogForTesting.py
alicetool/: main.py
alicetool/application/: __init__.py  data.py  editor.py  updates.py
alicetool/common/: gui.py  test_newproject_dialog.py  test_newproject_dialog_file.py  test_newproject_dialog_validation.py
alicetool/doc/: info.mdj  markup_example.json  refactored.mdj  uml.mdj  uml2.mdj
alicetool/domain/: __init__.py  core.py  factories.py  flows.py  porst.py  projects.py  test_createProject.py
alicetool/domain/core/: bot.py  porst.py  primitives.py
alicetool/domain/inputvectors/: levenshtain.py
alicetool/editor/: main.py
alicetool/editor/doc/: uml.mdj  uml2.mdj
alicetool/editor/domain/: commands.py  core.py  factories.py  flows.py  interfaces.py  projects.py  states.py
alicetool/editor/infrastructure/: data.py  gui.py  views.py  widgets.py
alicetool/editor/resources/: icons.qrc  icons_rc.py
alicetool/editor/services/: api.py  updates.py
alicetool/experiments/: sandbox.py  test_qt.py
alicetool/infrastructure/: __init__.py  buttons.py  data.py  gui.py  scene.py  views.py  widgets.py  windows.py
alicetool/infrastructure/qtgui/: __init__.py  data.py  flows.py  main_w.py  steps.py  (+2 more)
alicetool/presentation/: __init__.py  api.py  data.py  gui.py
alicetool/resources/: icons_rc.py  rc_icons.py
alicetool/services/: api.py  updates.py
db/: ii_constructor.sql
doc/: uml.mdj
doc/uml/: alanytics_common_classes.puml  alanytics_engine_classes.puml  alanytics_engine_flow.puml  alanytics_toolData_classes.puml  alanytics_toolData_flow.puml  alanytics_toolEditing_classes.puml  alanytics_toolEditing_flow.puml  architecture_layers.puml  component_diagram.puml  usecase_common.puml
engine/: index.py  requirements.txt
ii_constructor/: main.py
ii_constructor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ii_constructor/application/: data.py  editor.py
ii_constructor/doc/: current.mdj  uml.mdj  uml_new.mdj  uml_new_client.mdj  uml_new_server.mdj  заметки.txt
ii_constructor/resources/: icons_rc.py
tests/: conftest.py
(+44 files in other folders)
